<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EduCloud</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="coursematerials_tab">Course Materials</string>
    <string name="lessonplans_tab">Lesson Plans</string>
    <string name="DatabaseName">EduCloud</string>
    <string name="log_out">Log Out</string>
    <string name="log_in">Log In</string>
    <string name="exit">Exit</string>
    <string name="file_type">File Type</string>
    <string-array name="file_type_list">
        <item >Course Materials</item>
        <item >Lesson Plans</item>
    </string-array>
    <string name="file_name">Filename</string>
    <string name="file_name_hint">Click to browse sdcard</string>
    <string name="upload_btn">Upload</string>
    <string name="tags_hint">Add comma (,) to separate tags...</string>
    <string name="tags">Tags</string>
    <string name="comment">Comment</string>
    <string name="comment_hint">Enter comment here</string>
    <string name="comment_submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="file_title">Title</string>
    <string name="file_description">Description</string>
    <string name="send">Send</string>
    <string name="file_path">File Path</string>
    <string name="search_hint">Enter keyword here</string>
    <string name="search">Search</string>

</resources>
