<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical" >
   	    
   	<LinearLayout 
   		android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:paddingTop="10dp"
    	android:paddingBottom="10dp"
   	    android:weightSum="10"
   	    android:orientation="horizontal">
   	        
   	    <ImageView
        	android:id="@+id/imgCommentsFile"
        	android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="2"
        	android:src="@drawable/file_icon"/>
    
		<LinearLayout
    	    android:layout_width="0dp"
        	android:layout_height="wrap_content"
        	android:layout_weight="8"
	        android:orientation="vertical">
	        	
    		<TextView
	        	android:id="@+id/tvCommentsTitle"
        		android:layout_width="match_parent"
        		android:layout_height="wrap_content"
        		android:textSize="20sp" 
        		android:textStyle="bold"
        		android:text="Hello"/>
	    	
			<TextView 
    	    	android:id="@+id/tvCommentsTags"
    	    	android:layout_width="match_parent"
    	    	android:layout_height="wrap_content"
    	    	android:layout_marginTop="10dp"
    	    	android:textSize="18sp"
    	    	android:text="Tags"/>
	    	  	
    	</LinearLayout>
   	        
   	</LinearLayout>
   	
   	<LinearLayout 
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:weightSum="5"
   	    android:paddingTop="15dp"
   	    android:orientation="horizontal">
   	    
   	    <LinearLayout 
   	        android:layout_width="0dp"
   	        android:layout_height="wrap_content"
   	        android:layout_weight="4"
   	        android:orientation="vertical">
   	        
   	        
   	        <TextView 
   				android:id="@+id/tvComment"
   	    		android:layout_width="match_parent"
   	    		android:layout_height="wrap_content"
   	    		android:textSize="20sp"
   	    		android:textStyle="bold"
   	    		android:text="@string/comment"/>
   	    
			<EditText 
   	    		android:id="@+id/etComment"
   	    		android:layout_width="match_parent"
   	    		android:layout_height="wrap_content"
   	    		android:paddingLeft="2dp"
   	    		android:paddingRight="2dp"
   	    		android:background="@drawable/edittext_background"
   	    		android:hint="@string/comment_hint"
   	    		android:textSize="28sp"/>
			
   	    </LinearLayout>
		
   	    <Button
   	    	android:id="@+id/btnCommentSend"
   	    	android:layout_width="0dp"
   	    	android:layout_height="wrap_content"
   	    	android:layout_weight="1"
   	    	android:layout_marginTop="10dp"
   	    	android:layout_marginBottom="10dp"
   	    	android:layout_marginLeft="5dp"
   	    	android:background="@drawable/button_selector"
   	    	android:text="@string/send"/>
   	    
   	</LinearLayout>
   	    
	<ListView 
   		android:id="@+id/lvCommentsList"
   	   	android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="5dp"/>
    
</LinearLayout>
